[tool.poetry]
name = "fullstack-data-engineer"
version = "0.1.0"
description = "Take-home assignment with PySpark, Delta Lake, and Azure integration"
authors = ["Nayana Holanda <holanda.nayana@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"

# Core data engineering
pyspark = "^3.5.1"
delta-spark = "^3.0.0"
pyarrow = "^15.0.0"
pandas = "^2.2.1"

# Azure
azure-storage-blob = "^12.19.0"

# HTTP / APIs
requests = "^2.31.0"

# Optional: CLI, helpers
findspark = "^2.0.1"
databricks-cli = "^0.18.0"
ipykernel = "^6.29.5"
notebook = "^7.4.2"
jupyterlab = "^4.4.2"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
matplotlib = "^3.10.3"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


